org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-10-31
	- Fixed 17: example still data included.
	  The general behavior was that resetting to original values was incorrect.
	  Now, an OntologyInfo object two maps, one for the original values, and the
	  other for new values (assignied during the editing session, either manually
	  or by running the "example" actions).

	- several improvements.

2008-10-30
	- UploadServlet: use File.createTempFile with sessionId; the previous scheme
	  was buggy!
	- Fixed: 15: preview operation not idempotent
	- Also fixed: multiple owl:Ontology sections: now the esiting one is used
	  to add/updated the metadata attributes.
	  
	- ontologyUri= parameter: it is handled by just displaying the metadataPanel
	  in no-editing mode:
	  	- no buttons
	  	- no required marks (*)
	  	- no listBoxes, just plain textboxes
	  this functionality can be used in:
	  	- the aquaportal front-end (already called from there)
	  	- HTML output in the Ont URI resolver (TODO)


2008-10-29 
	- submit new ontology starting from local file:
		basic steps implemented: load-edit-review-upload

TODOS:
	- load a registered ontology
	- Assign DC from the Omv and OmvMmi props
	
2008-10-28 (started; based on voc2rdf)

	