@@ -3,6 +3,9 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-01
+	- Improved login interface.
+	
 2008-10-31
 	- Fixed 17: example still data included.
 	  The general behavior was that resetting to original values was incorrect.
